# prettyansible

./: README.md  prettyansible.cabal  stack.yaml
app/: Main.hs
src/: Main.hs  Parser.hs
tests/: Unit.hs
