name:                prettyansible
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/prettyansible#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:  Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , conduit-extra
                     , resourcet
                     , text
                     , attoparsec
                     , wl-pprint
                     , conduit-combinators

executable prettyansible
  hs-source-dirs:      app 
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , prettyansible

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Unit.hs
  build-depends:       prettyansible
                     , base >= 4.7 && < 5
                     , attoparsec
                     , tasty-hunit
                     , tasty
  default-language:    Haskell2010
